# AIOpsLab

./: .env.example  .gitignore  404.html  CLAUDE.md  HOW_TO_RUN.md  Makefile  README.md  SETUP.md  TutorialSetup.md  docker-compose.yml  fix-storage-classes.yaml  index.html  init.sql  mkdocs.yml  pyproject.toml  quick-setup.ps1  send_job_all.py  service.py  service_api.py  start_service_api.sh  test_azure_openai.py  test_flash_single.py
.github/: copilot-instructions.md  sanity-check.yml
Echo/: README.md  server.py
aiopslab/: config.yml.example  onboarding_evaluator.py  session.py
app/: package.json  server.js
clients/: README.md  README_AGENTS.md  client.py  custom_agent.py  deepseek.py  flash.py  generic_openai.py  gpt.py  gpt_azure_identity.py  litellm_agent.py  llama.py  openrouter.py  qwen.py  react.py  registry.py  simple_agent.py  supervisor.py  test_agents.py  vllm.py
docs/: echo_job_api.md  index.md  problem_registry_ids.md  variant_catalogue.md
ground_truth/: README.md  assign_to_non_existent_node_social_net-analysis_ground_truth.json  assign_to_non_existent_node_social_net-detection-1_ground_truth.json  assign_to_non_existent_node_social_net-detection_ground_truth.json  assign_to_non_existent_node_social_net-localization_ground_truth.json  assign_to_non_existent_node_social_net-mitigation_ground_truth.json  astronomy_shop_ad_service_failure-detection_ground_truth.json  astronomy_shop_ad_service_failure-localization_ground_truth.json  astronomy_shop_ad_service_high_cpu-detection_ground_truth.json  astronomy_shop_ad_service_high_cpu-localization-1_ground_truth.json  astronomy_shop_ad_service_high_cpu-localization_ground_truth.json  astronomy_shop_ad_service_manual_gc-detection_ground_truth.json  astronomy_shop_ad_service_manual_gc-localization-1_ground_truth.json  astronomy_shop_ad_service_manual_gc-localization_ground_truth.json  astronomy_shop_cart_service_failure-detection_ground_truth.json  astronomy_shop_cart_service_failure-localization-1_ground_truth.json  astronomy_shop_cart_service_failure-localization_ground_truth.json  astronomy_shop_image_slow_load-detection-1_ground_truth.json  astronomy_shop_image_slow_load-detection_ground_truth.json  astronomy_shop_image_slow_load-localization_ground_truth.json  astronomy_shop_kafka_queue_problems-detection-1_ground_truth.json  astronomy_shop_kafka_queue_problems-detection_ground_truth.json  astronomy_shop_kafka_queue_problems-localization_ground_truth.json  astronomy_shop_loadgenerator_flood_homepage-detection-1_ground_truth.json  astronomy_shop_loadgenerator_flood_homepage-detection_ground_truth.json  astronomy_shop_loadgenerator_flood_homepage-localization-1_ground_truth.json  astronomy_shop_loadgenerator_flood_homepage-localization_ground_truth.json  (+105 more)
(+340 files in other folders)
