[tool.poetry]
name = "aiopslab"
version = "0.1.0"
description = "benchmark and eval framework for AI powered DevOps"
authors = ["Manish Shetty", "Yinfang Chen"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
importlib = "^1.0.4"
black = "^24.4.2"
pyright = "^1.1.366"
openai = "^1.33.0"
pydantic = "^2.7.4"
kubernetes = "^30.1.0"
colorama = "^0.4.6"
rich = "^13.7.1"
tiktoken = "^0.7.0"
prompt-toolkit = "^3.0.47"
prometheus-api-client = "^0.5.5"
autogen-agentchat = "^0.2.40"
elasticsearch = "^8.16.0"
azure-identity = "^1.19.0"
azure-ai-ml = "^1.22.1"
paramiko = "^3.5.0"
wandb = "^0.19.7"
python-dotenv = "^1.0.1"
vllm = "^0.7.3"
transformers = "^4.49.0"
fastapi = "^0.115.12"
groq = "^0.28.0"
flwr = "^1.19.0"
pydantic-settings = "^2.10.1"
structlog = "^25.4.0"
prometheus-client = "^0.22.1"
sqlalchemy = "^2.0.43"
asyncpg = "^0.30.0"
psycopg2-binary = "^2.9.10"
alembic = "^1.16.5"
greenlet = "^3.2.4"


[tool.poetry.group.dev.dependencies]
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
