[tool.poetry]
name = "aiopslab"
version = "0.1.0"
description = "benchmark and eval framework for AI powered DevOps"
authors = ["Manish Shetty", "Yinfang Chen"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
importlib = "^1.0.4"
black = "^24.4.2"
pyright = "^1.1.366"
openai = "^1.33.0"
pydantic = "^2.7.4"
kubernetes = "^30.1.0"
colorama = "^0.4.6"
rich = "^13.7.1"
prompt-toolkit = "^3.0.47"
prometheus-api-client = "^0.5.5"
tiktoken = "^0.7.0"
elasticsearch = "^8.16.0"
azure-identity = "^1.19.0"
paramiko = "^3.5.0"
wandb = "^0.19.7"
python-dotenv = "^1.0.1"
fastapi = "^0.115.12"
docker = "^7.0"
pandas = "^2.0"
pytz = "^2024.0"
requests = "^2.31"
pyyaml = "^6.0"

# Client/agent packages that require CUDA or heavy ML runtimes.
# These are installed by default (`poetry install`) but can be excluded in
# environments that only need the core framework, e.g. CI:
#   poetry install --without clients
[tool.poetry.group.clients.dependencies]
autogen-agentchat = "^0.2.40"
azure-ai-ml = "^1.22.1"
vllm = "^0.7.3"
transformers = "^4.49.0"
groq = "^0.28.0"
flwr = "^1.19.0"

# Developer tooling (testing, etc.)
[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-asyncio = "^0.25"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests that require a live Kubernetes cluster (deselect with '-m not integration')",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
